# simple_viz

./: CMakeLists.txt  README.md
src/: imageviz.cpp  imageviz.h  main.cpp  pointcloudviz.cpp  pointcloudviz.h
src/shader/: shader_axis.fs  shader_axis.vs  shader_mesh.fs  shader_mesh.vs  shader_points.fs  shader_points.vs
